// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterLocalizationForm initializes 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": false,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_expression"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <p
            data-spec="instructions"
          >
            Sometimes languages need special rules to route things properly. If a translation is not provided, the original rule will be used.
          </p>
          <div
            className="translating_operator_container"
            data-spec="operator-field"
          >
            <div
              className="translating_operator"
              data-spec="verbose-name"
            >
              has any of the words
            </div>
            <div
              className="translating_from"
              data-spec="argument-to-translate"
            >
              red
            </div>
            <div
              className="translating_to"
            >
              <Connect(TextInputElement)
                data-spec="localize-case"
                entry={
                  Object {
                    "value": "rojo, r",
                  }
                }
                name="1dce2b34-9aab-4e20-81c4-3f0408dcb671"
                onChange={[Function]}
                placeholder="Spanish Translation"
                showLabel={false}
              />
            </div>
          </div>
          <div
            className="translating_operator_container"
            data-spec="operator-field"
          >
            <div
              className="translating_operator"
              data-spec="verbose-name"
            >
              has any of the words
            </div>
            <div
              className="translating_from"
              data-spec="argument-to-translate"
            >
              blue
            </div>
            <div
              className="translating_to"
            >
              <Connect(TextInputElement)
                data-spec="localize-case"
                entry={
                  Object {
                    "value": "",
                  }
                }
                name="763e4844-3e1b-407a-a1b5-5fdfcd308b41"
                onChange={[Function]}
                placeholder="Spanish Translation"
                showLabel={false}
              />
            </div>
          </div>
        </React.Fragment>,
        "name": "Rule Translations",
      },
    ]
  }
  title="Spanish Category Names"
>
  <p
    data-spec="instructions"
  >
    When category names are referenced later in the flow, the appropriate language for the category will be used. If no translation is provided, the original text will be used.
  </p>
  <div
    className="translating_exit"
    key="b1f332f3-bdd3-4891-aec5-1843a712dbf1"
  >
    <div
      className="translating_from"
      data-spec="exit-name"
    >
      Colors
    </div>
    <div
      className="translating_to"
    >
      <Connect(TextInputElement)
        data-spec="localize-exit"
        entry={
          Object {
            "value": "",
          }
        }
        name=""
        onChange={[Function]}
        placeholder="Spanish Translation"
        showLabel={false}
      />
    </div>
  </div>
  <div
    className="translating_exit"
    key="061fc171-8b79-4636-b892-bd0ea5aa9b42"
  >
    <div
      className="translating_from"
      data-spec="exit-name"
    >
      Other
    </div>
    <div
      className="translating_to"
    >
      <Connect(TextInputElement)
        data-spec="localize-exit"
        entry={
          Object {
            "value": Array [
              "Otro",
            ],
          }
        }
        name={
          Array [
            "Otro",
          ]
        }
        onChange={[Function]}
        placeholder="Spanish Translation"
        showLabel={false}
      />
    </div>
  </div>
</Dialog>
`;

exports[`RouterLocalizationForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": false,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_expression"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <p
            data-spec="instructions"
          >
            Sometimes languages need special rules to route things properly. If a translation is not provided, the original rule will be used.
          </p>
          <div
            className="translating_operator_container"
            data-spec="operator-field"
          >
            <div
              className="translating_operator"
              data-spec="verbose-name"
            >
              has any of the words
            </div>
            <div
              className="translating_from"
              data-spec="argument-to-translate"
            >
              red
            </div>
            <div
              className="translating_to"
            >
              <Connect(TextInputElement)
                data-spec="localize-case"
                entry={
                  Object {
                    "value": "rojo, r",
                  }
                }
                name="1dce2b34-9aab-4e20-81c4-3f0408dcb671"
                onChange={[Function]}
                placeholder="Spanish Translation"
                showLabel={false}
              />
            </div>
          </div>
          <div
            className="translating_operator_container"
            data-spec="operator-field"
          >
            <div
              className="translating_operator"
              data-spec="verbose-name"
            >
              has any of the words
            </div>
            <div
              className="translating_from"
              data-spec="argument-to-translate"
            >
              blue
            </div>
            <div
              className="translating_to"
            >
              <Connect(TextInputElement)
                data-spec="localize-case"
                entry={
                  Object {
                    "value": "",
                  }
                }
                name="763e4844-3e1b-407a-a1b5-5fdfcd308b41"
                onChange={[Function]}
                placeholder="Spanish Translation"
                showLabel={false}
              />
            </div>
          </div>
        </React.Fragment>,
        "name": "Rule Translations",
      },
    ]
  }
  title="Spanish Category Names"
>
  <p
    data-spec="instructions"
  >
    When category names are referenced later in the flow, the appropriate language for the category will be used. If no translation is provided, the original text will be used.
  </p>
  <div
    className="translating_exit"
    key="b1f332f3-bdd3-4891-aec5-1843a712dbf1"
  >
    <div
      className="translating_from"
      data-spec="exit-name"
    >
      Colors
    </div>
    <div
      className="translating_to"
    >
      <Connect(TextInputElement)
        data-spec="localize-exit"
        entry={
          Object {
            "value": "",
          }
        }
        name=""
        onChange={[Function]}
        placeholder="Spanish Translation"
        showLabel={false}
      />
    </div>
  </div>
  <div
    className="translating_exit"
    key="061fc171-8b79-4636-b892-bd0ea5aa9b42"
  >
    <div
      className="translating_from"
      data-spec="exit-name"
    >
      Other
    </div>
    <div
      className="translating_to"
    >
      <Connect(TextInputElement)
        data-spec="localize-exit"
        entry={
          Object {
            "value": Array [
              "Otro",
            ],
          }
        }
        name={
          Array [
            "Otro",
          ]
        }
        onChange={[Function]}
        placeholder="Spanish Translation"
        showLabel={false}
      />
    </div>
  </div>
</Dialog>
`;

exports[`RouterLocalizationForm updates should save changes 1`] = `
Object {
  "cases": Array [
    Object {
      "arguments": Array [
        "Red, r, rolo, maroon",
      ],
      "exit_uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      "type": "has_any_word",
      "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
    },
    Object {
      "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
    },
  ],
  "exits": Array [
    Object {
      "destination_node_uuid": null,
      "name": "Roooojo!",
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
    Object {
      "destination_node_uuid": null,
      "name": Array [
        "Otro",
      ],
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
  ],
  "valid": true,
}
`;

exports[`RouterLocalizationForm updates should save changes 2`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {
        "name": "Roooojo!",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
    Object {
      "translations": Object {
        "name": Array [
          "Otro",
        ],
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    Object {
      "translations": Object {
        "arguments": Array [
          "Red, r, rolo, maroon",
        ],
      },
      "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
    },
    Object {
      "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
    },
  ],
]
`;
